client/assets/css/main.css
html,
body {
  height: 100%;
  background: #FFFFFF;
}

body {
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  color: #657786;
  /* letter-spacing: .5px; */
  background-color: #e6ecf0;
}

h1,h2,h3,h4,h5 {
  /* color: #5D6063; */
  color: #333;
}

nav {
  background-color: #000000;
  box-shadow: 0 2px 0 rgba(93, 96, 99, .1);
}

h2{
  font-size: 1.5rem;
  font-weight: 400;
  letter-spacing: .25px;
}

th, td {
  padding: 1rem;
}

.subhead {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  letter-spacing: 0.1rem;
}
.btn-outline-secondary {
  color: white !important;
}
img {
  max-width: 60%;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.show .dropdown-toggle.btn-primary {
  background-color: #26a449;
  border-color: #26a449;
}

.btn-primary {
  background: #1FB650;
  border-color: #1FB650;
}

.btn-secondary:hover,
.btn-secondary:focus,
.btn-secondary:active,
.btn-secondary.active,
.show .dropdown-toggle.btn-secondary {
  background-color: #1DA1F2;
  border-color: #1DA1F2;
}

.btn-secondary {
  background: #4AB3F4;
  border-color: #4AB3F4;
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active,
.btn-light.active,
.show .dropdown-toggle.btn-light {
  background-color: #CCD6DD;
  border-color: #BDC6CC;
}

.btn-light {
  color: #657786;
  background: #CCD6DD;
  border-color: #BDC6CC;
}

.signup-wrapper {
  background: #1DA1F2;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: left;
  min-height: 100vh;
  position: relative;
  padding: 10px 15px 40px;
}

.signup-box {
  background: white;
  border-radius: 5px;
  padding: 40px 60px;
  max-width: 620px;
  min-width: 420px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.red-hint {
  color: red;
  font-size: .9rem;
}

#main-footer {
  background: #262F36;
  color: white;
  padding: 6rem 0;
  font-size: 0.8rem;
}

#main-footer h6 {
  color: #718FA9;
}

#main-footer a {
  color: #6c6f73;
}

/* @media screen and (min-width: 991px) {
  .feature-content {
    display: flex;
    align-items: center;
  }
} */

.logo {
  margin-bottom: 20px;
}

#nav-username {
  color: #FFFFFF;
}

#nav-username:hover {
  text-decoration: none;
  cursor: default;
}

#user-options {
  color: #FFFFFF;
}

#user-options:hover {
  text-decoration: none;
}

#filters {
  background: #1DA1F2;
  /* min-height: 9rem; */
  padding: 2rem;
  padding-bottom: 1.5rem;
  /* margin: 1rem; */
  /* border-bottom: 1px solid lightgray; */
}

.analytics {
  min-height: 50em;
  padding: 1rem;
  margin: 1rem;
}

.informationBlock {
  /* border: 1px solid #ced4da; */
  border-radius: 5px;
  vertical-align: top;
}

.informationBlockTitle {
  padding: 1rem 1rem .5rem 1rem;
}

.nav-pills {
  padding: 0 1rem 1rem 1rem;
  font-size: .9rem;
}

.nav-link {
  padding: .25rem .5rem;
}

.bottom-line-border {
  border-bottom: 1px solid #ced4da;
}

#trendingTopics {
  /* float:left; */
  width: 100%;
  display: inline-block;
}

#mostPopularUsers {
  width: 100%;
}

.sectionTitle {
  padding-top: 1rem;
  padding-left: 1.5rem!important;
  padding-right: 1.5rem!important;
  padding-bottom: 1rem!important;
}

#userChart td {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 1rem;
  padding-bottom: 0px;
}

#tweets-table {
  width: 100%;
  color: #5D6063;
}

/* #tweets-table thead {
  width: 100%;
} */

#tweets-table tbody {
  max-height: 600px;
  overflow: auto;
  width: 100%;
}

#tweets-table thead,
#tweets-table tbody,
#tweets-table tr,
#tweets-table td,
#tweets-table th {
  display: block;
}

#tweets-table thead > tr > th,
#tweets-table tbody > tr > td {
  float: left;
  height: 100%;
  padding: 1rem;
}

#tweets-table thead tr {
  height: 3.5rem;
}

#tweets-table tbody tr {
  height: 5rem;
}

#tweets-table th:nth-child(1), td:nth-child(1) {
  width: 20%;
}
#tweets-table th:nth-child(2), td:nth-child(2) {
  width: 60%;
}
#tweets-table th:nth-child(3), td:nth-child(3) {
  width: 10%;
}
#tweets-table th:nth-child(4), td:nth-child(4) {
  width: 10%;
}

#post-caption:hover {
  text-decoration: none;
}

#error-message {
  width: 100%;
}

#userChart tbody {
  border-bottom: solid;
  border-width: .5px;
  border-color: lightgrey;
}

#userChart {
  width: 100%;
}

.dropdown {
  width: 14%;
  float: left;
}

#dropdownMenu2 {
  width: 100%;
  color: #fefefe;
  letter-spacing: .5px;
  font-size: 18px;
  font-weight:600;
  padding: .25rem .75rem;
}

.graphContainer {
  padding: 1rem;
  max-height: 650px;
  overflow: auto;
}

#graph {
  display: grid;
  grid-template-columns: repeat(100, 1fr);
  grid-template-rows: repeat(50, 1fr);
  /* border-left: 1px solid lightgrey; */
  /* padding: 1rem; */
  /* margin-left: 1.5rem!important;
  margin-right: 1.5rem!important;
  margin-bottom: 1rem!important;
  margin-top: 1rem!important; */
}

.trend {
  margin: 0;
  padding: 0;
  transition: all .6s ease;
  grid-column-start: 1;
  height: 2.5rem;
}

.trend:hover {
  opacity: .5;
  cursor: pointer;
}

.trend:nth-child(odd) {
 background-color: #E7F3FF;
}

.trend:nth-child(even) {
 background-color: #B3CFEB;
}

.searchBar {
  /* display: block; */
  /* width: 100%; */
  /* height: calc(1.5em + .75rem + 9px); */
  /* padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: white; */
  background-color: #FFFFFF;
  /* background-clip: padding-box; */
  /* border: 2px solid #BDC6CC; */
  border-radius: 5px;
  /* transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; */
}

#leftSearchBtn {
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

#rightSearchBtn {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.form-control {
  border: 0;
  height: auto;
  background-color: #e6ecf0;
  color: #657786;
  /* border-radius: .5rem; */
}

td p {
  font-size: 12px;
  font-weight: 700;
  color: gray;
}

td button {
  width: 100%;
}

td .btn {
  padding-top: 0;
  padding-bottom: .625rem;
  padding-left: .75rem;
  padding-right: .75rem;
}

.button-td {
  padding-top: 0;
}

i {
  padding: .3rem 4px;
  font-weight: 600;

}

.dropdown-item.active {
  background-color: #26a44aa6;
}

.dropdown-item:focus {
  background-color: #26a44a;
}

*:focus {
    outline-style: none;
    box-shadow: none;
    border-color: transparent;
}

#topicInput, #locationInput {
  letter-spacing: .5px;
  font-weight: 400;
  font-size: 18px;
}

#dropdownMenu2, #topicInput, #locationInput, #captionDropdown, #popularTab, #recentTab {
  outline-style: none;
  box-shadow: none;
  border-color: transparent;
}

#dropdownMenu2 i {
  color: #fefefe;
}

.left-container {
  float:left;
  width:35%;
  flex: 1 1 2.5%;
  display: flex;
  flex-direction: column;
  margin-right: 2.5%;
}

.right-container {
  /* float:right; */
  width:62.5%;
  /* height: 200px; */
  display: inline-block;
}

#filters p {
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 1.5rem;
}

hr {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  border: 0;
  border-top: 1px solid rgba(0,0,0,.1);
  /* width: 80%; */
}

#graph p {
  margin: .5rem;
}

#charty {
  width: 400px;
  height: 400px;
}

